2003-02-28  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-file-management-properties.c: 
	* src/nautilus-file-management-properties.glade:
	Add a 1 GB value for the thumbnailing limit.
	Rename "Image Files" to "Other Previewable Files" in thumbnail page.
	Patch from Keith Conger <kconger@navisite.com>
	[string change]

2003-02-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-volume-monitor.c (finish_creating_volume):
	Correctly handle floppies and cdroms mounted outside /mnt too.
	Based on patch from Mattias Eriksson <snaggen@acc.umu.se>.

2003-02-21  Roozbeh Pournader  <rozobeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require bonobo-activation 2.1.0

	* src/nautilus-server-connect.c (D):
	Fix macro

2003-02-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus/nautilus-view-standard-main.c (nautilus_view_standard_main_multi):
	Move the GNOME_CLIENT_PARAM_SM_CONNECT property setting to the
	gnome_program_init call. Setting it later doesn't work.
	
	* src/file-manager/fm-directory-view.c (no_locale_at_end) 
	(get_bonobo_menu_verb_names): Filter out locale versions
	of nautilusverbs.

2003-02-17  Arvind Samptur <arvind.samptur@wipro.com>
	* src/nautilus-file-management-properties.[ch]:
	(nautilus_file_management_properties_dialog_setup):
	(nautilus_file_management_properties_dialog_show):
	* src/nautilus-window-menus.c:
	(preferences_callback):
	* src/nautilus-file-management-properties-main.c:
	(main):

	Multi-head stuff done for the preferences dialog.

	* libnautilus-private/nautilus-icon-dnd.c: (confirm_switch_to_manual_layout)
	Get the transient parent for the "Switch to Manual Layout ?" right.

	Patches approved by Dave Camp. #100343 and #106086.
	
2003-02-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c (thumbnail_thread_start):
	Free pixbuf when saved.
