@@ -1,5 +1,11 @@
 2003-02-28  Alexander Larsson  <alexl@redhat.com>
 
+	* components/text/nautilus-text-view.c (nautilus_text_view_instance_init):
+	Use monospaced font for text view.
+	Patch by Luca Ferretti <elle.uca@libero.it>
+
+2003-02-28  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-file-management-properties.c: 
 	* src/nautilus-file-management-properties.glade:
 	Add a 1 GB value for the thumbnailing limit.
